--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,17 +273,31 @@ body {
 }
 
 .battle-health-bar-wrapper {
-  -webkit-box-flex: 3;
-      -ms-flex: 3 1 auto;
-          flex: 3 1 auto;
+  -webkit-box-flex: 2;
+      -ms-flex: 2 1 auto;
+          flex: 2 1 auto;
+}
+
+@media screen and (min-width: 992px) {
+  .battle-health-bar-wrapper {
+    -webkit-box-flex: 3;
+        -ms-flex: 3 1 auto;
+            flex: 3 1 auto;
+  }
 }
 
 .battle-health-bounding-box {
   background-color: #ccc;
   height: 12px;
-  width: 275px;
+  width: 155px;
   border: solid 2px black;
   border-radius: 15px;
+}
+
+@media screen and (min-width: 700px) {
+  .battle-health-bounding-box {
+    width: 275px;
+  }
 }
 
 .battle-health-bar {
@@ -318,12 +332,18 @@ body {
 }
 
 .battle-monster-sprite {
-  width: 100px;
+  width: 125px;
 }
 
 @media screen and (min-width: 700px) {
   .battle-monster-sprite {
     width: 200px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .battle-monster-sprite {
+    width: 250px;
   }
 }
 
