--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -49,6 +49,18 @@ body {
 
 /*
  
+ #### ########     ##     ## ######## ##    ## ##     ## 
+  ##  ##     ##    ###   ### ##       ###   ## ##     ## 
+  ##  ##     ##    #### #### ##       ####  ## ##     ## 
+  ##  ##     ##    ## ### ## ######   ## ## ## ##     ## 
+  ##  ##     ##    ##     ## ##       ##  #### ##     ## 
+  ##  ##     ##    ##     ## ##       ##   ### ##     ## 
+ #### ########     ##     ## ######## ##    ##  #######  
+ 
+*/
+
+/*
+ 
   ######  ##     ##    ###    ########    
  ##    ## ##     ##   ## ##      ##       
  ##       ##     ##  ##   ##     ##       
