Added Demo Pulltab Triangle

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,6 +135,14 @@ body {
  #### ########     ##     ## ######## ##    ##  #######  
  
 */
+#id-menu-side {
+  position: fixed;
+}
+
+.pulltab-triangle {
+  fill: red;
+}
+
 /*
  
   ######  ##     ##    ###    ########    
