--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -59,6 +59,14 @@ body {
  
 */
 
+#id-menu-side {
+    position: fixed;
+}
+
+.pulltab-triangle {
+    fill: red;
+}
+
 /*
  
   ######  ##     ##    ###    ########    
