--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,7 @@
     background-position: 0 0;
   }
   to {
-    background-position: -400px -400px;
+    background-position: 0 400px;
   }
 }
 @keyframes slide {
@@ -62,7 +62,7 @@
     background-position: 0 0;
   }
   to {
-    background-position: -400px -400px;
+    background-position: 0 400px;
   }
 }
 
@@ -126,21 +126,48 @@ body {
 
 /*
  
- #### ########     ##     ## ######## ##    ## ##     ## 
-  ##  ##     ##    ###   ### ##       ###   ## ##     ## 
-  ##  ##     ##    #### #### ##       ####  ## ##     ## 
-  ##  ##     ##    ## ### ## ######   ## ## ## ##     ## 
-  ##  ##     ##    ##     ## ##       ##  #### ##     ## 
-  ##  ##     ##    ##     ## ##       ##   ### ##     ## 
- #### ########     ##     ## ######## ##    ##  #######  
+ ##        #######   ######   #### ##    ## 
+ ##       ##     ## ##    ##   ##  ###   ## 
+ ##       ##     ## ##         ##  ####  ## 
+ ##       ##     ## ##   ####  ##  ## ## ## 
+ ##       ##     ## ##    ##   ##  ##  #### 
+ ##       ##     ## ##    ##   ##  ##   ### 
+ ########  #######   ######   #### ##    ## 
  
 */
-#id-menu-side {
+#login-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-color: #030512;
+  background-image: url("https://www.transparenttextures.com/patterns/graphy.png");
+  -webkit-animation: slide 10s linear infinite;
+          animation: slide 10s linear infinite;
+  -webkit-transition: opacity 3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: opacity 3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.pulltab-triangle {
-  fill: red;
+#login-menu-modal {
+  background-color: lightgreen;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+  height: 75%;
+}
+
+#login-menu-submit {
+  border: 2px black solid;
+  padding: 5px;
 }
 
 /*
@@ -173,18 +200,6 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-@media screen and (min-width: 992px) {
-  #room-info {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: end;
-  }
 }
 
 .chat-row-item {
