--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -49,22 +49,48 @@ body {
 
 /*
  
- #### ########     ##     ## ######## ##    ## ##     ## 
-  ##  ##     ##    ###   ### ##       ###   ## ##     ## 
-  ##  ##     ##    #### #### ##       ####  ## ##     ## 
-  ##  ##     ##    ## ### ## ######   ## ## ## ##     ## 
-  ##  ##     ##    ##     ## ##       ##  #### ##     ## 
-  ##  ##     ##    ##     ## ##       ##   ### ##     ## 
- #### ########     ##     ## ######## ##    ##  #######  
+ ##        #######   ######   #### ##    ## 
+ ##       ##     ## ##    ##   ##  ###   ## 
+ ##       ##     ## ##         ##  ####  ## 
+ ##       ##     ## ##   ####  ##  ## ## ## 
+ ##       ##     ## ##    ##   ##  ##  #### 
+ ##       ##     ## ##    ##   ##  ##   ### 
+ ########  #######   ######   #### ##    ## 
  
 */
 
-#id-menu-side {
+// Perfect Full-Page Modal example from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal
+#login-menu {
+    display: flex;
     position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    background-color: #030512;
+
+    // Moving background slide
+    background-image: url("https://www.transparenttextures.com/patterns/graphy.png");
+    @include infinite-slide;
+    transition: opacity 3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.pulltab-triangle {
-    fill: red;
+#login-menu-modal {
+    background-color: lightgreen;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    height: 75%;
+}
+
+#login-menu-submit {
+    border: 2px black solid;
+    padding: 5px;
 }
 
 /*
@@ -89,11 +115,6 @@ body {
     display: flex;
     flex-flow: row;
     justify-content: space-between;
-
-    @media screen and (min-width: $desktop-min-width) {
-        flex-flow: column;
-        align-items: end;
-    }
 }
 
 #room-id-label {
