Fixed battle column wrapping issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -312,8 +312,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
 }
 
 .battle-scence-column {
