--- a/styles/styles.css
+++ b/styles/styles.css
@@ -239,8 +239,8 @@ body {
 
 #chat-send-message-input {
   -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+      -ms-flex: 2 1;
+          flex: 2 1;
   border: 0px;
   -webkit-border-start: black 1px solid;
           border-inline-start: black 1px solid;
@@ -251,12 +251,13 @@ body {
   -webkit-padding-end: 1px;
           padding-inline-end: 1px;
   line-height: 1.5;
+  min-width: 150px;
 }
 
 #chat-send-message-button {
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+      -ms-flex: 1 2;
+          flex: 1 2;
   color: black;
   background: #e2e2e2;
   background: -webkit-gradient(linear, left bottom, left top, from(#e2e2e2), color-stop(43%, #e2e2e2), color-stop(43%, #eee), color-stop(57%, #eee), color-stop(57%, #fff));
