--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,12 @@
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   font-family: "pkmn_rbygsc";
 }
 
@@ -84,7 +89,10 @@ body {
 #poke-container {
   background-color: #030512;
   background-image: url("https://www.transparenttextures.com/patterns/graphy.png");
-  background-size: 48px;
+  -webkit-animation: slide 10s linear infinite;
+          animation: slide 10s linear infinite;
+  -webkit-transition: opacity 3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: opacity 3s cubic-bezier(0.165, 0.84, 0.44, 1);
   min-height: 100vh;
   width: 100%;
   display: -webkit-box;
@@ -98,6 +106,7 @@ body {
 
 @media screen and (min-width: 992px) {
   #poke-container {
+    height: 100%;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-flow: row wrap;
@@ -149,11 +158,12 @@ body {
   background-color: black;
   background-color: rgba(0, 0, 0, 0.4);
   background-color: #030512;
+  opacity: 1;
   background-image: url("https://www.transparenttextures.com/patterns/graphy.png");
   -webkit-animation: slide 10s linear infinite;
           animation: slide 10s linear infinite;
-  -webkit-transition: opacity 3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: opacity 3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-transition: opacity 2.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: opacity 2.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 #login-menu-modal {
@@ -187,6 +197,13 @@ body {
       -ms-flex-flow: column wrap;
           flex-flow: column wrap;
   color: white;
+  padding: 10px;
+}
+
+@media screen and (min-width: 992px) {
+  #chat-column {
+    height: 100%;
+  }
 }
 
 #room-info {
@@ -195,15 +212,15 @@ body {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
 .chat-row-item {
-  margin: 10px;
+  margin: 5px 0;
 }
 
 #chat-messages {
@@ -214,7 +231,10 @@ body {
           flex: none;
   height: 10rem;
   border: 1px black solid;
+  border-right: none;
   background-color: #001321;
+  width: 100%;
+  overflow: auto;
 }
 
 @media screen and (min-width: 992px) {
@@ -222,12 +242,19 @@ body {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
+    height: 100%;
     height: 4rem;
   }
 }
 
+.chat-send-messages {
+  margin: 6px 0;
+  overflow-wrap: break-word;
+}
+
 #chat-send-message {
   margin-top: 0px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -251,7 +278,7 @@ body {
   -webkit-padding-end: 1px;
           padding-inline-end: 1px;
   line-height: 1.5;
-  min-width: 150px;
+  min-width: 10px;
 }
 
 #chat-send-message-button {
