Monster stats now correctly populate

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -314,6 +314,12 @@ body {
     border: none;
     @include grey-gradient-button;
     @include angled-corners;
+
+    &:disabled,
+    [disabled] {
+        opacity: 0.7;
+        cursor: default;
+    }
 }
 
 /*
