--- a/styles/styles.css
+++ b/styles/styles.css
@@ -466,6 +466,12 @@ body {
           clip-path: polygon(15px 0, calc(100% - 15px) 0, 100% 15px, 100% calc(100% - 15px), calc(100% - 15px) 100%, 15px 100%, 0 calc(100% - 15px), 0 15px);
 }
 
+.battle-controller-button:disabled,
+.battle-controller-button [disabled] {
+  opacity: 0.7;
+  cursor: default;
+}
+
 /*
  
   ######  ########    ###    ########  ######  
