--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -54,6 +54,13 @@ $battle-health-bar-roundness: 15px;
         url("/assets/fonts/PKMN\ RBYGSC/pkmn_rbygsc-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
+
+    font-family: 'pokmon_dp_proregular';
+    src: url('/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff2') format('woff2'),
+         url('/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-size: 48;
 }
 
 /*
