--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,11 @@
   src: url("/assets/fonts/PKMN RBYGSC/pkmn_rbygsc-webfont.woff2") format("woff2"), url("/assets/fonts/PKMN RBYGSC/pkmn_rbygsc-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-family: 'pokmon_dp_proregular';
+  src: url("/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff2") format("woff2"), url("/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-size: 48;
 }
 
 /*
@@ -72,7 +77,7 @@ html {
 
 body {
   height: 100%;
-  font-family: "pkmn_rbygsc";
+  font-family: 'pokmon_dp_proregular';
 }
 
 /*
