--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,7 +7,7 @@ html {
 body {
     height: 100%;
     font-family: 'pokmon_dp_proregular';
-    font-size: 1.75em;
+    font-size: 1.95em;
 }
 
 /*
@@ -90,17 +90,32 @@ body {
 }
 
 #login-menu-modal {
-    background-color: lightgreen;
+    //background-color: lightgreen;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
+    //border: 1px solid #888;
     width: 60%;
     height: 75%;
+    @include angled-corners;
+    background: linear-gradient(
+        132deg,
+        rgba(16, 112, 160, 0.7) 0%,
+        rgba(16, 112, 160, 0.7) 25%,
+        rgba(0, 39, 68, 0.7) 26%,
+        rgba(0, 39, 68, 0.7) 74%,
+        rgba(16, 112, 160, 0.7) 75%,
+        rgba(16, 112, 160, 0.7) 100%
+    );
+    color: white;
 }
 
 #login-menu-submit {
-    border: 2px black solid;
-    padding: 5px;
+    width: 33%;
+    border: none;
+    @include grey-gradient-button;
+    @include angled-corners;
+    height: 15%;
+    color: black;
 }
 
 /*
@@ -219,9 +234,9 @@ body {
 
 // Visuals
 #battle-scence {
-    // background-image: url("/assets/img/DP_grass.png");
-    // background-size: cover;
-    background: repeating-linear-gradient(#c0e8e0, #c0e8e0 5px, #d8eee0 5px, #d8eee0 8px);
+    background-image: url("/assets/img/grass_daytime_background.jpg");
+    background-size: cover;
+    //background: repeating-linear-gradient(#c0e8e0, #c0e8e0 5px, #d8eee0 5px, #d8eee0 8px);
 }
 
 #battle-scence-wrapper {
@@ -379,7 +394,7 @@ body {
         rgba(16, 112, 160, 0.7) 75%,
         rgba(16, 112, 160, 0.7) 100%
     );
-    font-size: 1.25rem;
+    font-size: 1.8rem;
 }
 
 .stats-row {
