--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -265,7 +265,7 @@ body {
 }
 
 .battle-health-bounding-box {
-    background-color: #ccc;
+    background-color: darkslategray;
     height: $battle-health-bar-height;
     width: 155px;
     border: solid 2px black;
