--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,7 +6,7 @@ html {
 
 body {
     height: 100%;
-    font-family: 'pokmon_dp_proregular';
+    font-family: "pokmon_dp_proregular";
     font-size: 1.95em;
 }
 
@@ -314,6 +314,10 @@ body {
     height: 75px;
     margin: auto;
     opacity: 0.9;
+    @media screen and (min-width: $tablet-min-width) {
+        width: 50px;
+        height: 50px;
+    }
 }
 
 // Buttons
@@ -330,11 +334,39 @@ body {
     border: none;
     @include grey-gradient-button;
     @include angled-corners;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
 
     &:disabled,
     [disabled] {
         opacity: 0.6;
         cursor: default;
+    }
+}
+
+.battle-move-symbol {
+    width: 15%;
+    height: auto;
+}
+
+.battle-move-wrapper {
+    width: 50%;
+    text-align: left;
+}
+
+.battle-move-name {
+    font-size: 0.7em;
+    @media screen and (min-width: $desktop-min-width) {
+        font-size: 0.9em;
+    }
+}
+
+.battle-move-desc {
+    font-size: 0.4em;
+    @media screen and (min-width: $desktop-min-width) {
+        font-size: 0.7em;
     }
 }
 
@@ -350,6 +382,7 @@ body {
  
 */
 #stats-column {
+    height: 100%;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: 50% 50%;
@@ -398,7 +431,7 @@ body {
 }
 
 .stats-row {
-    margin: 15px;
+    margin: 8px;
     display: flex;
     justify-content: space-evenly;
     width: 120px;
