Buttons now show full move descriptions

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -527,6 +527,7 @@ body {
 @media screen and (min-width: 992px) {
   .battle-move-name {
     font-size: 0.9em;
+    text-decoration: underline;
   }
 }
 
