--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -13,6 +13,7 @@
 $desktop-min-width: 992px;
 $tablet-min-width: 700px;
 
+// Angled Corners
 $angled-corner: 15px;
 @mixin angled-corners {
     clip-path: polygon(
@@ -25,6 +26,15 @@ $angled-corner: 15px;
         0 calc(100% - #{$angled-corner}),
         0 $angled-corner
     );
+}
+
+// Banner Headers
+@mixin header-banner {
+    border: #1fa792 3px solid;
+    margin: 0 -6px;
+    padding: 4px 5px;
+    border-inline: 3px;
+    background-color: #001321;
 }
 
 $battle-column-width: 60%;
@@ -55,10 +65,10 @@ $battle-health-bar-roundness: 15px;
     font-weight: normal;
     font-style: normal;
 }
-@font-face{
-    font-family: 'pokmon_dp_proregular';
-    src: url('/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff2') format('woff2'),
-         url('/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff') format('woff');
+@font-face {
+    font-family: "pokmon_dp_proregular";
+    src: url("/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff2") format("woff2"),
+        url("/assets/fonts/PKMN DP/pokemon-dp-pro-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
